languages/CNNTrainLang/src/test/resources/invalid_cocos_tests/CheckContinuousRLAlgorithmUsesContinuousStrategy.cnnt
/* (c) https://github.com/MontiCore/monticore */
configuration CheckContinuousRLAlgorithmUsesContinuousStrategy {
     learning_method : reinforcement
     rl_algorithm: ddpg-algorithm

     environment : gym { name:"CartPole-v1" }

     strategy: epsgreedy {
        epsilon: 1.0
        epsilon_decay_method: linear
        epsilon_decay: 0.01
     }
}
